feat-commit for changes like Agence, Client services Communication by using RestTemplate !

--- a/reclamation/src/main/resources/application.properties
+++ b/reclamation/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8080
+
+api.agence.url=http://localhost:8080/agence/get?code={code}
